wDesktop 0.3.1 (UNRELEASED)
 * When a message is received, don't grab the focus, notify the user.
 * Make the chat input grow as needed for long messages.
 * Only allow one chat contact to be selected at a time.
 * Display the contact's avatar in the chat dialog.
 * Make it possible to clear the history of a conversation.
 * Notify the user that wDesktop will quit once a new version is downloaded.

wdesktop 0.3.0 (2010-01-18)
 * Implement server ping (XEP-0199) and reconnection.
 * Fix chat history scrolling when sending a message.

wDesktop 0.2.9 (2010-01-15)
 * Display nicknames when available.
 * Improve contact status icons by adding a shadow.
 * Disable DNS SRV lookups for chat.

wDesktop 0.2.8 (2010-01-13)
 * Make it possible to connect when DNS SRV lookup fails.

wDesktop 0.2.7 (2010-01-13)
 * Only perform long ping if short ping gives errors to speed things up.
 * Add a progress bar to the diagnostics window.
 * Raise chat conversation window when it's activated.
 * When a chat conversation is activated, pass focus to the input line.

wDesktop 0.2.6 (2010-01-12)
 * Improve window behaviour on OS X.
 * Show contact status in chat dialog.
 * Improve contact icons.
 * Sort contacts by status then by name.
 * Add glow around wDesktop icon.

wDesktop 0.2.4
 * Make wDesktop start at login.
 * Make links clickable in chat window.
 * Fix plugins installation on Windows.

wDesktop 0.2.3
 * Display chat window at startup.
 * Display vCard image for chat contacts.
 * Add a User-Agent for request to portal.

wDesktop 0.2.2
 * Add a button in photos to go back to the previous folder.
 * Improve display of photo thumbnails.
 * Refresh photos list after photos have been uploaded.
 * Make it possible to run wDesktop at the end of Windows installer.
 * Display release changes in update prompt.

wDesktop 0.2.1
 * Fix French translation for "Refresh".
 * Make it possible to keep wDesktop in the dock on OS X.
